# ds_umi

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  act_check.sh  sim_convert_recordings.sh  sim_start_pipeline.sh  sim_teleop.sh  sim_viewer.sh  start_ego.sh  todo.md
docker/: .env  Dockerfile  docker-compose.yml  restart_ego_sim.sh  start_ego_viewer.sh  start_xarm6_viewer.sh  xarm6_viewer.py
docker/scripts/: entrypoint.sh
docs/: START.md
kinematics/: __init__.py
launch/launch/: __init__.py
outputs/: model_registry.json
planning/: tomorrow_2026-05-29.md  tomorrow_2026-05-30.md  tomorrow_2026-06-01.md  tomorrow_2026-06-02.md  tomorrow_2026-06-03.md  tomorrow_2026-06-04.md
robot_hal/: __init__.py
stage_1/: README.md  __init__.py
stage_1/launch/: __init__.py  ego_mediapipe.launch.py  package.xml  record_only.launch.py  setup.py  teleop_mock.launch.py  teleop_real.launch.py  teleop_sim_keyboard.launch.py
stage_1/perception/: __init__.py  camera_node.py  package.xml  setup.py
stage_1/teleop_bridge/: __init__.py  calibrate.py  calibration.py  hand_mapper.py  hand_tracking_node.py  mediapipe_bridge.py  mock_hand_tracker.py  package.xml  setup.py
stage_2/: _test_color.py  _test_vary.py  act_research.py  act_training_plan.md  compare_models.py  demo_ego.py  demo_reach.py  ego_capture_host.py  evaluate_all_models.py  evaluate_multitask.py  evaluate_rollout.py  extract_image_features.py  gen_visualizations.py  generate_color_cue_data.py  generate_diverse_data.py  generate_ego_data.py  generate_goal_data.py  generate_marker_data.py  generate_multitask_data.py  generate_varying_marker_data.py  ik_diagnostic.py  lerobot_v3_converter.py  mediapipe_ego.py  mujoco_renderer.py  quality_check.py  quality_filters.py  quality_report.md  realsense_ego.py  run_full_pipeline.sh  simulation_research.md  task_manager.py  time_sync_check.py  train_act.py  train_dp.py  train_ego_act.py  train_ego_cnn.py  train_goal_act.py  train_goal_dp.py  train_image_only.py  train_language_act.py  (+5 more)
tests/: __init__.py
(+75 files in other folders)
