<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_bridge</name>
  <version>0.1.0</version>
  <description>Quest3 hand-tracking → ROS2 bridge for UMI teleoperation</description>
  <maintainer email="user@example.com">dev</maintainer>
  <license>MIT</license>

  <!-- Python 依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
